--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MenuActivity"
-    tools:showIn="@layout/app_bar_menu"
-    style="@style/yellow">
+    tools:showIn="@layout/app_bar_menu">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/foodContainer"
@@ -15,7 +14,8 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="	#D3D3D3	">
 
     </android.support.v7.widget.RecyclerView>
 
