--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:id="@+id/card_view"
     android:layout_height="wrap_content"
     card_view:cardCornerRadius="8dp"
-    card_view:cardElevation="3dp"
+    card_view:cardElevation="1dp"
     card_view:cardUseCompatPadding="true">
 
     <RelativeLayout
@@ -20,10 +21,10 @@
             android:layout_height="wrap_content"
             android:layout_alignEnd="@+id/txt_name"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="68dp"
-            android:textColor="@color/colorPrimaryDark"
-            android:layout_marginEnd="-1dp"
-            android:text=" Rs 80" />
+            android:layout_marginTop="42dp"
+            android:layout_marginEnd="0dp"
+            android:text=" Rs 80"
+            android:textColor="@color/colorPrimaryDark" />
 
         <ImageView
             android:id="@+id/imageView"
@@ -55,10 +56,10 @@
             android:layout_height="wrap_content"
             android:layout_alignEnd="@+id/txt_name"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="43dp"
-            android:textStyle="bold"
-            android:layout_marginEnd="1dp"
-            android:text="mitho cha raja" />
+            android:layout_marginTop="66dp"
+            android:layout_marginEnd="0dp"
+            android:text="mitho cha raja"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/add_item"
@@ -66,8 +67,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginEnd="9dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="6dp"
+            android:layout_marginBottom="7dp"
             android:background="#ffb300"
             android:text="+1"
             android:visibility="visible" />
