--- a/app/src/main/res/menu/activity_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_drawer.xml
@@ -5,12 +5,12 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_menu"
             android:icon="@drawable/ic_view_list_black_24dp"
             android:title="Menu" />
     </group>
 
-    <item android:title="Misc">
+    <item android:title="Utilities">
         <menu>
             <item
                 android:id="@+id/nav_signOut"
