--- a/app/src/main/res/layout/activity_plate.xml
+++ b/app/src/main/res/layout/activity_plate.xml
@@ -10,8 +10,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/plate_container"
         android:layout_width="match_parent"
-        android:layout_height="497dp"
-        android:background="	#D3D3D3	"
+        android:layout_height="677dp"
+        android:background="#D3D3D3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -36,8 +36,8 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="0dp"
-            android:layout_marginBottom="11dp"
-            android:text="Order now"
-            android:background="#ffb300"/>
+            android:layout_marginBottom="0dp"
+            android:background="#ffb300"
+            android:text="Order now" />
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
